更新.gitignore以忽略dify目录
- 将dify目录完全添加到.gitignore中
- dify是独立的git仓库，应该被忽略
- 这样可以避免子仓库冲突问题

--- a/.gitignore
+++ b/.gitignore
@@ -25,10 +25,8 @@ build/
 *.duckdb
 *.duckdb.wal
 
-# Dify
-dify/docker/volumes/
-dify/docker/.env
-dify/docker/docker-compose.yaml
+# Dify - ignore entire dify directory as it's a separate git repository
+dify/
 
 # Docker
 *.log
